added functionality - add to/remove from cart + update visiblity on /all-books

--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -19,10 +19,10 @@
               </h1>
 
               <p>
-                <strong>Borrow book and have a nice time reading!</strong>
+                <strong>Borrow a book and have a nice time reading!</strong>
               </p>
 
-              <a target="_blank" href="/all-books" class="btn btn-outline-white btn-lg">
+              <a href="/all-books" class="btn btn-outline-white btn-lg">
                   <i class="fas fa-book-open"></i>
                   See all books
                   <i class="fas fa-book-open"></i>
