--- a/templates/book_list.html
+++ b/templates/book_list.html
@@ -7,7 +7,7 @@
     <div class="container">
 
       <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
+      <nav class="navbar navbar-expand-lg navbar-dark mt-3 mb-5" style="background-color: gray">
 
         <!-- Navbar brand -->
         <span class="navbar-brand">List of all books</span>
@@ -29,24 +29,47 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Shirts</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sport wears</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Outwears</a>
+{#              <a class="nav-link" href="#">Shirts</a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Sport wears</a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Outwears</a>#}
             </li>
 
           </ul>
           <!-- Links -->
 
-          <form class="form-inline">
-            <div class="md-form my-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-          </form>
+{#          <form class="form-inline" method="GET" action=".">#}
+{#            <div class="md-form my-0">#}
+{#              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">#}
+{#            <input class="form-control py-2 border-right-0 border" type="search" name="title_contains" placeholder="Title contains..." />#}
+{#                    <span class="input-group-append">#}
+{#                        <div class="input-group-text bg-transparent">#}
+{#                            <i class="fa fa-search"></i>#}
+{#                        </div>#}
+{#                    </span>#}
+{#            </div>#}
+{#              <button type="submit" class="btn btn-primary">Search</button>#}
+{#          </form>#}
+
         </div>
+
+{#          <div class="row">#}
+{#        <ul>#}
+{#          {% for book in queryset %}#}
+{#            <li>#}
+{#              {{ book.title }}#}
+{#              <span>Author: {{ book.author }}</span>#}
+{#              <span>#}
+{#                  Category: {{ book.category }}#}
+{#              </span>#}
+{#            </li>#}
+{#            <hr />#}
+{#          {% endfor %}#}
+{#        </ul>#}
+{#      </div>#}
         <!-- Collapsible content -->
 
       </nav>
@@ -54,99 +77,115 @@
 
       <section class="text-center mb-4">
 
-              <!--Grid row-->
-                <div class="row wow fadeIn">
-                    {% for book in books %}
+          <!--Grid row-->
+            <div class="row wow fadeIn">
+                {% for book in books %}
+                    {% if book.available %}
                         <!--Grid column-->
-                        <div class="col-lg-3 col-md-6 mb-4">
+                        <div class="col-lg-12 col-md-2 mb-2">
 
                             <!--Card-->
-                            <div class="card">
+                            <div class="card mb-3" >
+                                <div class="row g-0">
                                 <!--Card image-->
-                                  <div class="view overlay">
-{#                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/14.jpg" class="card-img-top" alt="">#}
-                                      <img src="{{ book.image.url }}" class="card-img-top">
-                                      <a href="{{ book.get_absolute_url }}">
-                                            <div class="mask rgba-white-slight"></div>
-                                        </a>
+                                  <div class="col-md-4">
+                                      <img src="{{ book.image.url }}" alt="pic" class="img-fluid rounded-start"/>
+{#                                      <a href="{{ book.get_absolute_url }}">#}
+{#                                            <div class="mask rgba-white-slight"></div>#}
+{#                                        </a>#}
                                   </div>
                                 <!--Card image-->
 
                                 <!--Card content-->
-                                <div class="card-body text-center">
-                                    <!--Category & Title-->
-                                    <a href="" class="grey-text">
-                                        <h5>{{ book.get_category_display }}</h5>
-                                    </a>
-                                    <h5>
-                                        <strong>
-                                            <a href="{{ item.get_absolute_url }}" class="dark-grey-text">
-                                                {{ book.title }}
+                                    <div class="col-md-8">
+                                        <div class="card-body text-center">
+                                            <!--Category & Title-->
+
+                                            <h5>
+                                                <strong>
+                                                    <a href="{{ item.get_absolute_url }}" class="dark-grey-text">
+                                                        {{ book.title }}
+                                                    </a>
+                                                </strong>
+                                            </h5>
+                                            <a class="grey-text">
+                                                <small>
+                                                    {{ book.get_category_display }}
+                                                </small>
                                             </a>
-                                        </strong>
-                                    </h5>
-                                    <button type="button" class="btn btn-outline-primary btn-rounded" data-mdb-ripple-color="dark">
-                                          Borrow
-                                    </button>
 
-{#                                    <h4 class="font-weight-bold blue-text">#}
-{#                                        <strong>$#}
-{#                                            {% if book.sale_price %}#}
-{#                                                {{ item.sale_price }}#}
-{#                                            {% else %}#}
-{#                                                {{ item.price }}#}
-{#                                            {% endif %}#}
-{#                                        </strong>#}
-{#                                    </h4>#}
-                                </div>
+                                            <div>
+                                                {{ book.description }}
+                                            </div>
+                                            <div class="grey-text" style="float: right">
+                                                {{ book.author }}
+                                            </div>
+
+                                            <a href="{{ book.get_add_to_cart_url}}" class="col-md-4" style="text-align:center; bottom: 0;">
+                                                <button type="button" class="btn btn-outline-black btn-rounded" data-mdb-ripple-color="dark"
+                                                        style="text-align:center; bottom: 0; float: left">
+                                                    Borrow
+                                                </button>
+                                            </a>
+
+
+            {#                                    <h4 class="font-weight-bold blue-text">#}
+            {#                                        <strong>$#}
+            {#                                            {% if book.sale_price %}#}
+            {#                                                {{ item.sale_price }}#}
+            {#                                            {% else %}#}
+            {#                                                {{ item.price }}#}
+            {#                                            {% endif %}#}
+            {#                                        </strong>#}
+            {#                                    </h4>#}
+                                        </div>
                               <!--Card content-->
+                                    </div>
 
+                                </div>
                             </div>
                             <!--Card-->
 
                         </div>
-                        <!--Grid column-->
-                    {% endfor %}
+                    <!--Grid column-->
+                    {% endif %}
+                {% endfor %}
 
-                </div>
-                <!--Grid row-->
+            </div>
+            <!--Grid row-->
 
           </section>
 
-       <!--Pagination-->
       {% if is_paginated %}
-          <nav class="d-flex justify-content-center wow fadeIn">
-              <ul class="pagination pg-blue">
+      <nav class="d-flex justify-content-center wow fadeIn">
+        <ul class="pagination pg-blue">
 
-              <!--Arrow left-->
-              {% if page_obj.has_previous %}
-                  <li class="page-item">
-                      <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-                          <span aria-hidden="true">&laquo;</span>
-                          <span class="sr-only">Previous</span>
-                      </a>
-                  </li>
-              {% endif %}
+          {% if page_obj.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+              <span class="sr-only">Previous</span>
+            </a>
+          </li>
+          {% endif %}
 
-              <li class="page-item active">
-                  <a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }}
-                      <span class="sr-only">(current)</span>
-                  </a>
-              </li>
+          <li class="page-item active">
+            <a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }}
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
 
-
-              {% if page_obj.has_next %}
-                  <li class="page-item">
-                      <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-                          <span aria-hidden="true">&raquo;</span>
-                          <span class="sr-only">Next</span>
-                      </a>
-                  </li>
-              {% endif %}
-            </ul>
-          </nav>
+          {% if page_obj.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+              <span class="sr-only">Next</span>
+            </a>
+          </li>
+          {% endif %}
+        </ul>
+      </nav>
       {% endif %}
-      <!--Pagination-->
 
     </div>
   </main>
