--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
     <div class="container">
         <!-- Brand -->
         <a class="navbar-brand waves-effect" href="/">
-            <strong class="blue-text">Library</strong>
+            <strong >Library</strong>
         </a>
 {#        <a href="/all-books">#}
 {#            All books#}
@@ -12,8 +12,8 @@
 
     <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="btn btn-outline-primary btn-rounded" data-mdb-ripple-color="dark" href="/all-books">All books
-              <span class="sr-only">(current)</span>
+            <a style="color: black" data-mdb-ripple-color="dark" href="/all-books">
+                All books
             </a>
           </li>
     </ul>
@@ -33,8 +33,8 @@
             <ul class="navbar-nav nav-flex-icons">
                 {% if request.user.is_authenticated %}
                     <li class="nav-item">
-                        <a href="/" class="nav-link waves-effect">
-                          <span class="badge red z-depth-1 mr-1"> 1 </span>
+                        <a type="button" href="/summary" class="nav-link waves-effect">
+{#                          <span class="badge black z-depth-1 mr-1"> 1 </span>#}
                             <i class="fas fa-shopping-cart"></i>
                           <span class="clearfix d-none d-sm-inline-block"> Borrowed </span>
                         </a>
