--- a/templates/order-summary.html
+++ b/templates/order-summary.html
@@ -5,77 +5,43 @@
       <div class="container">
 
           <div class="table-responsive">
-              <h1>Your Order Summary</h1>
+              <h1>Your Borrowed Books</h1>
               <table class="table">
                   <thead>
-                      <tr>
+                      <tr style="text-align: center">
                           <th scope="col"></th>
-                          <th scope="col">Product</th>
-                          <th scope="col">Price</th>
-                          <th scope="col">Quantity</th>
-                          <th scope="col">Price in total</th>
+                          <th scope="col">Title</th>
+                          <th scope="col">Author</th>
+                          <th scope="col">Category</th>
+                          <th scope="col">Return</th>
+
                       </tr>
                   </thead>
                   <tbody>
-                      {% for order_item in object.items.all %}
+                      {% for order_book in object.books.all %}
                           <tr>
-                              <th scope="row">{{ forloop.counter }}</th>
-                              <td>{{ order_item.item.title }}</td>
-                              <td>
-                                  {% if order_item.item.sale_price %}
-                                      <del>
-                                        ${{ order_item.item.price }}
-                                      </del>
-                                      <a class="mr-4"></a>
-                                      ${{ order_item.item.sale_price }}
-                                  {% else %}
-                                      ${{ order_item.item.price }}
-                                  {% endif %}
+                              <th scope="row" style="text-align: center; vertical-align: inherit">{{ forloop.counter }}</th>
+                              <td style="text-align: center; vertical-align: inherit">{{ order_book.book.title }}</td>
+                              <td style="text-align: center; vertical-align: inherit">
+                                  {{ order_book.book.author }}
                               </td>
-                              <td>
-                                  <a href="{% url 'core:remove-one-product-from-cart' order_item.item.slug %}"><i class="fas fa-minus mr-4"></i></a>
-                                  {{ order_item.quantity }}
-                                  <a href="{% url 'core:add-to-cart' order_item.item.slug %}"><i class="fas fa-plus ml-4"></i></a>
-
+                              <td style="text-align: center; vertical-align: inherit">
+                                  {{ order_book.book.category }}
                               </td>
-                              <td>
-                                  {% if order_item.item.sale_price %}
-                                      ${{ order_item.get_total_sale_item_price }}
-                                  {% else %}
-                                      ${{ order_item.get_total_item_price }}
-                                  {% endif %}
-                                  <a href="{% url 'core:remove-from-cart' order_item.item.slug %}">
-                                      <i class="fas fa-trash-alt float-right"></i>
+                              <td style="padding-right: 0; text-align: -webkit-center">
+                                  <a href="{% url 'core:remove-from-cart' order_book.book.slug %}">
+                                      <button type="button" class="btn btn-outline-black btn-rounded" data-mdb-ripple-color="dark">Return this book </button>
+{#                                      <i class="fas fa-trash-alt" style="margin-left: 1em"></i>#}
                                   </a>
                               </td>
 
                           </tr>
                           {% empty %}
                               <tr>
-                                  <td colspan="5" class="text-center">Your cart is empty</td>
-                                  <td colspan="5">
-                                      <a class="btn btn-primary float-left" href="/">Continue shopping</a>
-                                  </td>
+                                  <td colspan="5" class="text-center">You have nothing borrowed</td>
                               </tr>
                       {% endfor %}
-                      {% if object.coupon %}
-                          <tr>
-                              <td colspan="4"><strong>Coupon</strong></td>
-                              <td><strong>-${{ object.coupon.amount }}</strong></td>
-                          </tr>
-                      {% endif %}
-                      {% if object.get_total %}
-                          <tr>
-                              <td colspan="4"><strong>Total price</strong></td>
-                              <td><strong>${{ object.get_total }}</strong></td>
-                          </tr>
-                          <tr>
-                              <td colspan="5">
-                                  <a class="btn btn-primary float-left" href="/">Continue shopping</a>
-                                  <a class="btn btn-warning float-right" href="/checkout">Buy</a>
-                              </td>
-                          </tr>
-                      {% endif %}
+
                   </tbody>
               </table>
           </div>
