--- a/templates/book_list.html
+++ b/templates/book_list.html
@@ -7,28 +7,28 @@
     <div class="container">
 
       <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-dark mt-3 mb-5" style="background-color: gray">
-
-        <!-- Navbar brand -->
-        <span class="navbar-brand">List of all books</span>
-
-        <!-- Collapse button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
-          aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- Collapsible content -->
-        <div class="collapse navbar-collapse" id="basicExampleNav">
-
-          <!-- Links -->
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">All
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
+{#      <nav class="navbar navbar-expand-lg navbar-dark mt-3 mb-5" style="background-color: gray">#}
+{##}
+{#        <!-- Navbar brand -->#}
+{#        <span class="navbar-brand">List of all books</span>#}
+{##}
+{#        <!-- Collapse button -->#}
+{#        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"#}
+{#          aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">#}
+{#          <span class="navbar-toggler-icon"></span>#}
+{#        </button>#}
+{##}
+{#        <!-- Collapsible content -->#}
+{#        <div class="collapse navbar-collapse" id="basicExampleNav">#}
+{##}
+{#          <!-- Links -->#}
+{#          <ul class="navbar-nav mr-auto">#}
+{#            <li class="nav-item active">#}
+{#              <a class="nav-link" href="#">All#}
+{#                <span class="sr-only">(current)</span>#}
+{#              </a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
 {#              <a class="nav-link" href="#">Shirts</a>#}
 {#            </li>#}
 {#            <li class="nav-item">#}
@@ -36,11 +36,11 @@
 {#            </li>#}
 {#            <li class="nav-item">#}
 {#              <a class="nav-link" href="#">Outwears</a>#}
-            </li>
-
-          </ul>
-          <!-- Links -->
-
+{#            </li>#}
+{##}
+{#          </ul>#}
+{#          <!-- Links -->#}
+{##}
 {#          <form class="form-inline" method="GET" action=".">#}
 {#            <div class="md-form my-0">#}
 {#              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">#}
@@ -53,9 +53,9 @@
 {#            </div>#}
 {#              <button type="submit" class="btn btn-primary">Search</button>#}
 {#          </form>#}
-
-        </div>
-
+{##}
+{#        </div>#}
+{##}
 {#          <div class="row">#}
 {#        <ul>#}
 {#          {% for book in queryset %}#}
@@ -70,9 +70,9 @@
 {#          {% endfor %}#}
 {#        </ul>#}
 {#      </div>#}
-        <!-- Collapsible content -->
-
-      </nav>
+{#        <!-- Collapsible content -->#}
+{##}
+{#      </nav>#}
       <!--/.Navbar-->
 
       <section class="text-center mb-4">
@@ -82,13 +82,13 @@
                 {% for book in books %}
                     {% if book.available %}
                         <!--Grid column-->
-                        <div class="col-lg-12 col-md-2 mb-2">
+                        <div class="col-lg-12 col-md-12 mb-12">
 
                             <!--Card-->
                             <div class="card mb-3" >
                                 <div class="row g-0">
                                 <!--Card image-->
-                                  <div class="col-md-4">
+                                  <div class="col-md-4" style="align-self: center">
                                       <img src="{{ book.image.url }}" alt="pic" class="img-fluid rounded-start"/>
 {#                                      <a href="{{ book.get_absolute_url }}">#}
 {#                                            <div class="mask rgba-white-slight"></div>#}
@@ -121,12 +121,14 @@
                                                 {{ book.author }}
                                             </div>
 
-                                            <a href="{{ book.get_add_to_cart_url}}" class="col-md-4" style="text-align:center; bottom: 0;">
-                                                <button type="button" class="btn btn-outline-black btn-rounded" data-mdb-ripple-color="dark"
-                                                        style="text-align:center; bottom: 0; float: left">
-                                                    Borrow
-                                                </button>
-                                            </a>
+                                            {% if request.user.is_superuser == False %}
+                                                <a href="{{ book.get_add_to_cart_url}}" class="col-md-4" style="text-align:center; bottom: 0;">
+                                                    <button type="button" class="btn btn-outline-black btn-rounded" data-mdb-ripple-color="dark"
+                                                            style="text-align:center; bottom: 0; float: left">
+                                                        Borrow
+                                                    </button>
+                                                </a>
+                                            {% endif %}
 
 
             {#                                    <h4 class="font-weight-bold blue-text">#}
