--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,7 +22,6 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <!-- Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!-- Left -->
@@ -32,18 +31,36 @@
             <!-- Right -->
             <ul class="navbar-nav nav-flex-icons">
                 {% if request.user.is_authenticated %}
-                    <li class="nav-item">
-                        <a type="button" href="/summary" class="nav-link waves-effect">
-{#                          <span class="badge black z-depth-1 mr-1"> 1 </span>#}
-                            <i class="fas fa-shopping-cart"></i>
-                          <span class="clearfix d-none d-sm-inline-block"> Borrowed </span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link waves-effect" href="{% url 'account_logout' %}">
-                          <span class="clearfix d-none d-sm-inline-block"> Log out </span>
-                        </a>
-                    </li>
+                    {% if request.user.is_superuser %}
+                        <li class="nav-item">
+                            <a class="nav-link waves-effect" href="/profile">
+                              <span class="clearfix d-none d-sm-inline-block"> Profile </span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link waves-effect" href="{% url 'account_logout' %}">
+                              <span class="clearfix d-none d-sm-inline-block"> Log out </span>
+                            </a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a type="button" href="/summary" class="nav-link waves-effect">
+    {#                          <span class="badge black z-depth-1 mr-1"> 1 </span>#}
+                                <i class="fas fa-shopping-cart"></i>
+                              <span class="clearfix d-none d-sm-inline-block"> Borrowed </span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link waves-effect" href="/profile">
+                              <span class="clearfix d-none d-sm-inline-block"> Profile </span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link waves-effect" href="{% url 'account_logout' %}">
+                              <span class="clearfix d-none d-sm-inline-block"> Log out </span>
+                            </a>
+                        </li>
+                    {% endif %}
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link waves-effect" href="{% url 'account_login' %}">
