--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,7 +30,7 @@
     </div>
     <!--/.Slides-->
 
-  <div class="container">
+  <div class="container" style="margin-top: 20px">
       <div class="table-responsive">
               <h1>Your Credentials</h1>
               <table class="table">
@@ -53,7 +53,9 @@
                           </td>
                           <td style="padding-right: 0; text-align: -webkit-center">
                               <a href="{% url 'account_change_password' %}">
-                                  <button type="button" class="btn btn-outline-black btn-rounded" data-mdb-ripple-color="dark"> Change Password </button>
+                                  <button type="button" class="btn btn-outline-black btn-rounded" data-mdb-ripple-color="dark">
+                                      Change Password
+                                  </button>
         {#                                      <i class="fas fa-trash-alt" style="margin-left: 1em"></i>#}
                               </a>
                           </td>
